# mooc

./: .gitignore  README.md  dune-project  mooc.opam
lib/: arr.ml  arr.mli  dune  ex01.ml  ex01.mli  ex02.ml  ex02.mli  lst.ml  lst.mli  math.ml  math.mli  trie.ml  trie.mli
test/: dune  lst_test.ml  math_test.ml  test_mooc.ml  test_utils.ml
